# weather_data_pipeline

./: README.md  docker-compose.yaml  load_data.py  main.py  pyproject.toml
dags/: weather_dag.py
data/: weather_data.json
notebooks/: data_analysis.ipynb
src/: extract_data.py  load_data.py  transform_data.py
